Development Portal (2024-04-11 shi)
==============================
Fix old translation text
Update participating-org page text
Update all translations


Development Portal (2024-04-10 shi)
==============================
Update new graphs layouts
Update css


Development Portal (2024-04-08 shi)
==============================
Update IATI Organisations to IATI Reporting Orgs
Update Orgs to Organisations
Add participating-org list page


Development Portal (2024-04-04 shi)
==============================
Update all 'publisher/s' to 'organisation/s'
Fix link text for mentions
Update all translations


Development Portal (2024-04-04 shi)
==============================
Update css for REF baseline alignment in SAVi
Rename Project to Activity in SAVi


Development Portal (2024-04-03 shi)
==============================
Update all 'project/s' to 'activity/ies'
Add participating-org section to main page
Update all translation pages


Development Portal (2024-03-07 shi)
==============================
Add mention links for publisher and participating-org #661
Update all translation pages
Update transaction overview css for SAVi


Development Portal (2024-01-23 shi)
==============================
Update Contact Publisher link
Update footer displaying contact publisher link
Fix narrative to display for recipients in org files
Update @ref links to publisher or participating-org


Development Portal (2024-01-19 shi)
==============================
Update link text for Publisher contact
Update all translation pages


Development Portal (2023-07-27 shi)
==============================
Update BETA status
Update print-friendly css for beta badge
Add d-preview link to footer
Minor css fixes


Development Portal (2023-06-21 shi)
==============================
Remove period-percent check for SAVi


Development Portal (2023-03-20 shi)
==============================
Display narratives for tag element of non-embedded codelist if found


Development Portal (2022-03-23 shi)