@@ -191,12 +191,12 @@ a.graph_wrap			{display:block; position:relative; width:960px;}
 .graph_bar_info			{padding-bottom:20px; text-align:right; margin-top:10px; margin-right:20px; font-size:12px; color:#666;}
 .graph_bar_row_wrap		{display:flex; align-items:center; padding:0 20px;}
 .graph_bar_wrap			{border-right:1px solid #999; padding:10px 20px 10px 0; text-align:right; width:480px;}
-.graph_bar_text_wrap	{display:flex; align-items:center; justify-content:flex-end;}
-.graph_bar_text			{font-size:16px;}
+.graph_bar_text_wrap	{display:flex; align-items:center; justify-content:flex-end; padding-top:5px;}
+.graph_bar_text			{font-size:16px; line-height:21px;}
 .graph_bar_code			{background-color:rgba(192, 213, 242, 0.7); border-radius:4px; color:#222; font-size:11px; margin-left:10px; padding:2px 5px; white-space:nowrap;}
-.graph_bar_value_wrap	{padding-top:5px;}
+.graph_bar_value_wrap	{}
 .graph_bar_percent_wrap	{display:flex; align-items:center;}
-.graph_bar_value		{color:#666; margin-left:10px; font-weight:bold; font-size:16px;}
+.graph_bar_value		{color:#666; font-weight:bold; font-size:16px;}
 .graph_bar				{height:24px; max-width:335px; position:relative;}
 .graph_bar:before 		{background-color:rgba(17, 46, 105, 0.1); content:""; height:24px; left:0; position:absolute; top:0; width:335px;}
 .graph_bar_overlay 		{height:24px; left:0; position:absolute; top:0;}
