@@ -305,8 +305,8 @@
 #donor_graph_bars_item
 <div class="graph_bar_row_wrap">
 	<div class="graph_bar_wrap">
-		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}</span><span class="graph_bar_code">{code}</span></div>
 		<div class="graph_bar_value_wrap"><span class="graph_bar_value">{str_num}</span></div>
+		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}<span class="graph_bar_code">{code}</span></span></div>
 	</div><div class="graph_bar_percent_wrap">
 		<span class="graph_bar" style="width:calc({pct} * 3.35px);">
 			<span class="graph_bar_overlay donor_bar" style="width:calc({pct} * 3.35px);"></span>
@@ -332,8 +332,8 @@
 #countries_graph_bars_item
 <div class="graph_bar_row_wrap">
 	<div class="graph_bar_wrap">
-		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}</span><span class="graph_bar_code">{code}</span></div>
 		<div class="graph_bar_value_wrap"><span class="graph_bar_value">{str_num}</span></div>
+		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}</span><span class="graph_bar_code">{code}</span></div>
 	</div><div class="graph_bar_percent_wrap">
 		<span class="graph_bar" style="width:calc({pct} * 3.35px);">
 			<span class="graph_bar_overlay country_bar" style="width:calc({pct} * 3.35px);"></span>
@@ -359,8 +359,8 @@
 #sector_graph_bars_item
 <div class="graph_bar_row_wrap">
 	<div class="graph_bar_wrap">
-		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}</span><span class="graph_bar_code">{code}</span></div>
 		<div class="graph_bar_value_wrap"><span class="graph_bar_value">{str_num}</span></div>
+		<div class="graph_bar_text_wrap"><span class="graph_bar_text">{str_lab}</span><span class="graph_bar_code">{code}</span></div>
 	</div><div class="graph_bar_percent_wrap">
 		<span class="graph_bar" style="width:calc({pct} * 3.35px);">
 			<span class="graph_bar_overlay sector_bar" style="width:calc({pct} * 3.35px);"></span>
