@@ -1,3 +1,8 @@
+Development Portal (2024-04-16 shi)
+==============================
+Update css for new graph bars
+
+
 Development Portal (2024-04-11 shi)
 ==============================
 Fix old translation text
